--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="closeBtn">Close</button>
         <h2>Mes autres trucs</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit culpa, voluptates, beatae blanditiis ipsum ratione eaque molestias mollitia error eius ex sed odio maiores deleniti officia, aspernatur laudantium eveniet fuga?
-        axime itaque esse! Unde praesentium deleniti, facilis placeat inventore ex, facilis placeat inventore ex, amet rerum dignissimos. Beatae voluptas magnam laborum error cupiditate sed quos dolorum!
+        axime itaque esse! Unde praesentium deleniti, facilis placeat inventore ex, amet rerum dignissimos. Beatae voluptas magnam laborum error cupiditate sed quos dolorum!
         </p>
     </dialog>
 
